# Dolphin-MPN

./: .gitignore  .gitmodules  BuildMacOSARM64Binary.py  BuildMacOSUniversalBinary.py  CMakeLists.txt  Readme.md  build_dolphin_wasm.bat  build_dolphin_wasm.sh  build_macos.sh
Source/Android/jni/: AndroidNetPlayUI.h  CMakeLists.txt  MainAndroid.cpp  Netplay.cpp  Netplay.h  multiplayer.cpp  multiplayer.h
Source/Android/jni/AndroidCommon/: IDCache.cpp
Source/Android/jni/Input/: EmulatedController.cpp
Source/Android/jni/NetPlay/: NetPlayUICallbacks.cpp  NetPlayUICallbacks.h
Source/Core/: CMakeLists.txt  DolphinLib.props  DolphinLib.vcxproj
Source/Core/Common/: Buffer.h  CommonPaths.h  ENet.cpp  ENet.h  FileUtil.cpp  FileUtil.h  HookableEvent.h  HttpRequest.cpp  HttpRequest.h  MinizipUtil.h  SCMRevGen.vcxproj  SPSCQueue.h  Version.cpp  WindowSystemInfo.h  make_scmrev.h.js  x64Emitter.h
Source/Core/Common/GL/: GLContext.cpp
Source/Core/Common/Logging/: Log.h  LogManager.cpp
Source/Core/Core/: AchievementManager.cpp  ActionReplay.cpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.h  CoreTiming.cpp  CoreTiming.h  GeckoCode.cpp  GeckoCode.h  Host.h  NetPlayClient.cpp  NetPlayClient.h  NetPlayProto.h  NetPlayServer.cpp  NetPlayServer.h  PatchEngine.cpp  blocklist.txt  generate_blocklist.ps1
Source/Core/Core/Config/: GraphicsSettings.cpp  GraphicsSettings.h  MainSettings.cpp  NetplaySettings.cpp
Source/Core/Core/Debugger/: PPCDebugInterface.cpp  PPCDebugInterface.h
Source/Core/Core/HLE/: HLE.cpp  HLE_Misc.cpp
Source/Core/Core/HW/: GBACore.cpp  GCKeyboard.cpp  GCPad.cpp  ProcessorInterface.cpp  Wiimote.cpp  Wiimote.h
Source/Core/Core/HW/DVD/: AMMediaboard.cpp
Source/Core/Core/HW/EXI/: EXI.cpp  EXI_Device.cpp  EXI_Device.h  EXI_DeviceEthernet.cpp  EXI_DeviceEthernet.h  EXI_DeviceIPL.cpp
Source/Core/Core/HW/MagCard/: MagneticCardReader.cpp
Source/Core/Core/HW/SI/: SI.cpp  SI_DeviceGCController.cpp
Source/Core/Core/HW/WiimoteEmu/: DesiredWiimoteState.cpp  DesiredWiimoteState.h
Source/Core/Core/MarioPartyNetplay/: Discord.cpp  Discord.h  Gamestate.cpp  Gamestate.h  TurnCountLogger.cpp  TurnCountLogger.h
Source/Core/Core/PowerPC/: BreakPoints.h  GDBStub.cpp  MMU.cpp  PPCCache.cpp  PowerPC.cpp  PowerPC.h
Source/Core/Core/PowerPC/Interpreter/: Interpreter_LoadStore.cpp  Interpreter_SystemRegisters.cpp
Source/Core/Core/PowerPC/Jit64/: Jit_SystemRegisters.cpp
Source/Core/DiscIO/: CMakeLists.txt  Volume.h  VolumeVerifier.cpp  VolumeWad.cpp  VolumeWii.cpp  WiiBanner.cpp  WiiBanner.h
Source/Core/DolphinNoGUI/: CMakeLists.txt  DolphinNoGUI.vcxproj  MainNoGUI.cpp  Platform.h  PlatformWeb.cpp  PlatformWin32.cpp
Source/Core/DolphinQt/: AboutDialog.cpp  CMakeLists.txt  DolphinQt.vcxproj  GCMemcardManager.cpp  Host.cpp  HotkeyScheduler.cpp  Info.plist.in  Main.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  NANDRepairDialog.cpp  RenderWidget.cpp  Resources.cpp  Settings.cpp  Settings.h  ToolBar.cpp
Source/Core/DolphinQt/Config/: GameConfigWidget.cpp  GamecubeControllersWidget.cpp  GeckoCodeWidget.cpp  InfoWidget.cpp  MarioPartyNetplayWidget.cpp  MarioPartyNetplayWidget.h  PropertiesDialog.cpp  PropertiesDialog.h  SettingsWindow.cpp  SettingsWindow.h
Source/Core/DolphinQt/Config/ControllerInterface/: DualShockUDPSettings.h
Source/Core/DolphinQt/Config/Graphics/: AdvancedWidget.cpp  GeneralWidget.cpp  GeneralWidget.h
Source/Core/DolphinQt/Config/Mapping/: GCPadWiiUConfigDialog.cpp  GCPadWiiUConfigDialog.h  MappingCommon.cpp  MappingWidget.cpp  MappingWidget.h  MappingWindow.cpp  MappingWindow.h
Source/Core/DolphinQt/Debugger/: BreakpointWidget.cpp  BreakpointWidget.h
Source/Core/DolphinQt/GameList/: GameList.cpp
Source/Core/DolphinQt/MarioPartyNetplay/: DownloadUpdateDialog.cpp  DownloadWorker.cpp  DownloadWorker.h  InstallUpdateDialog.cpp  InstallUpdateDialog.h  UpdateDialog.cpp
Source/Core/DolphinQt/NetPlay/: NetPlayBrowser.cpp  NetPlayDialog.cpp  NetPlayDialog.h  NetPlaySetupDialog.cpp  NetPlaySetupDialog.h  PadMappingDialog.cpp  PadMappingDialog.h
Source/Core/DolphinQt/QtUtils/: SetWindowDecorations.cpp  SetWindowDecorations.h
Source/Core/DolphinQt/Settings/: BroadbandAdapterSettingsDialog.cpp  BroadbandAdapterSettingsDialog.h  GameCubePane.cpp  GeneralPane.cpp  GeneralPane.h  InterfacePane.cpp  InterfacePane.h  MarioPartyNetplayPane.cpp  MarioPartyNetplayPane.h
Source/Core/DolphinTool/: DolphinTool.vcxproj  ToolHeadlessPlatform.cpp
Source/Core/InputCommon/: DynamicInputTextureManager.cpp  GCAdapter.cpp  ImageOperations.cpp  InputConfig.cpp  InputConfig.h  InputProfile.cpp
Source/Core/InputCommon/ControlReference/: ControlReference.h
Source/Core/InputCommon/ControllerEmu/: StickGate.cpp
Source/Core/InputCommon/ControllerEmu/ControlGroup/: AnalogStick.cpp  ControlGroup.cpp  Cursor.cpp  (+2 more)
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp  ControllerInterface.h  MappingCommon.cpp
Source/Core/InputCommon/DynamicInputTextures/: DITConfiguration.cpp
Source/Core/UICommon/: AutoUpdate.cpp  DiscordPresence.cpp  GameFile.cpp  GameFile.h  GameFileCache.cpp  NetPlayIndex.cpp  UICommon.cpp
Source/Core/UICommon/ResourcePack/: ResourcePack.cpp
Source/Core/VideoBackends/Vulkan/: VKPipeline.cpp  VulkanContext.cpp
Source/Core/VideoCommon/: HiresTextures.cpp  HiresTextures.h  NetPlayChatUI.cpp  NetPlayChatUI.h  NetPlayGolfUI.cpp  NetPlayGolfUI.h  OnScreenDisplay.h  OnScreenUI.cpp  PerformanceMetrics.cpp  VideoConfig.cpp  VideoConfig.h
(+149 files in other folders)
